// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders with no a11y violations 1`] = `
.c0 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-size: 13px;
  line-height: 18px;
  font-weight: 400;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  text-align: inherit;
}

.c1 {
  color: #2C3236;
  background-color: #D4D7D9;
  display: inline-block;
  padding: 4px 10px;
  white-space: nowrap;
  border-radius: 4px;
}

<span
  class="c0 c1"
>
  Content
</span>
`;

exports[`<Badge /> renders with specific size: "medium" 1`] = `
.c0 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-size: 13px;
  line-height: 18px;
  font-weight: 400;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  text-align: inherit;
}

.c1 {
  color: #2C3236;
  background-color: #D4D7D9;
  display: inline-block;
  padding: 4px 10px;
  white-space: nowrap;
  border-radius: 4px;
}

<span
  class="c0 c1"
>
  Content
</span>
`;

exports[`<Badge /> renders with specific size: "small" 1`] = `
.c0 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-size: 13px;
  line-height: 18px;
  font-weight: 400;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  text-align: inherit;
}

.c1 {
  color: #2C3236;
  background-color: #D4D7D9;
  display: inline-block;
  padding: 4px 10px;
  white-space: nowrap;
  border-radius: 4px;
}

<span
  class="c0 c1"
>
  Content
</span>
`;

exports[`<Badge /> renders with specific style 1`] = `
.c0 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-size: 13px;
  line-height: 18px;
  font-weight: 400;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  text-align: inherit;
}

.c1 {
  color: #2C3236;
  background-color: #DDFDE5;
  display: inline-block;
  padding: 4px 10px;
  white-space: nowrap;
  border-radius: 4px;
}

<span
  class="c0 c1"
>
  Content
</span>
`;

exports[`<Badge /> renders without crashing 1`] = `
.c0 {
  margin: 0;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-size: 13px;
  line-height: 18px;
  font-weight: 400;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  text-align: inherit;
}

.c1 {
  color: #2C3236;
  background-color: #D4D7D9;
  display: inline-block;
  padding: 4px 10px;
  white-space: nowrap;
  border-radius: 4px;
}

<span
  class="c0 c1"
>
  Content
</span>
`;
